<resources>
    <string name="app_name">Clabor</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="start_new_game">Начать новую игру</string>
    <string name="count_players">Количество играков:</string>
    <string name="Points">Очки:</string>
    <string name="next">Далее</string>
    <string name="fill_players_name">Заполните имена в порядке посадки играков</string>
    <string name="player_1">Игрок 1</string>
    <string name="player_2">Игрок 2</string>
    <string name="player_3">Игрок 3</string>
    <string name="player_4">Игрок 4</string>
    <string name="used_names">Ранее использованые имена</string>
    <string name="rules">Правила</string>
    <string name="games">Игры</string>
    <string name="choose_game_mode">Выберите режим</string>
    <string name="game_rules_info">Перед началом игры необходимо обговорить все ключевые правила с играками, особенно если играете с ними впервые. Правила бывают отличается в разнах кампаниях, что говорить о разных городах.</string>
    <string name="game_rules">Правила игры</string>
    <string name="list_is_empty">Список игр пуст</string>
    <string name="game_history">История игр</string>
    <string name="in_development">In development</string>
    <string name="PenaltyForSeriousOfBeits">Штраф за серию бейтов</string>
    <string name="length_of_series_of_beits">Длина серии бейтов</string>
    <string name="type_name">Введите имя</string>

    <string-array name="game_case_list">
        <item>Бейт</item>
        <item>Без взятие</item>
        <item>-100</item>
        <item>Висячка</item>
    </string-array>
</resources>
