<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    tools:context=".ui.names.NamesFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_size"
        android:text="@string/fill_players_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/player_1"
        android:hint="@string/player_1"
        style="@style/name_input_layout"
        app:counterMaxLength="20">

        <com.google.android.material.textfield.TextInputEditText style="@style/name_edit_view" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/player_2"
        android:hint="@string/player_2"
        style="@style/name_input_layout"
        app:counterMaxLength="20">

        <com.google.android.material.textfield.TextInputEditText style="@style/name_edit_view" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/player_3"
        android:hint="@string/player_3"
        style="@style/name_input_layout"
        app:counterMaxLength="20">

        <com.google.android.material.textfield.TextInputEditText style="@style/name_edit_view" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/player_4"
        android:hint="@string/player_4"
        style="@style/name_input_layout"
        app:counterMaxLength="20">

        <com.google.android.material.textfield.TextInputEditText style="@style/name_edit_view" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_size"
        android:layout_marginTop="16dp"
        android:text="@string/used_names" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/names_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="LinearLayoutManager"
        tools:listitem="@layout/item_names" />
</LinearLayout>